Agregando contenido a la seccion servicios del portafolio

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <li>SEO</li>
                 </ul>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam temporibus nesciunt ipsam iusto praesentium nisi, quam ducimus adipisci cum repellat beatae culpa harum sint saepe, recusandae facilis.
+                    I am a web developer with experience in website development. I specialize in creating custom websites using HTML, CSS and JavaScript. I am able to work in a team and collaborate with other developers to deliver high quality projects under tight deadlines.
                 </p>
             </div>
             <div class="service">
@@ -112,7 +112,7 @@
                     <li>Web Services</li>
                 </ul>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam temporibus nesciunt ipsam iusto praesentium nisi, quam ducimus adipisci cum repellat beatae culpa harum sint saepe, recusandae facilis.
+                    I am an API developer with experience in creating scalable solutions for integrating applications and services. I have experience in designing and developing RESTful APIs using tools and technologies such as Java, PHP, Spring Boot and Laravel. I am able to work in a team and collaborate with other developers to deliver high quality solutions under tight deadlines. In addition, I have experience in documenting and testing APIs to ensure their quality and usability.
                 </p>
             </div>
             <div class="service">
@@ -125,7 +125,7 @@
                     <li>Website layout</li>
                 </ul>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam temporibus nesciunt ipsam iusto praesentium nisi, quam ducimus adipisci cum repellat beatae culpa harum sint saepe, recusandae facilis.
+                    I am a web application developer with experience in developing custom and scalable web applications using technologies such as HTML, CSS, JavaScript and React. I also have experience in implementing database solutions and integrating web services using RESTful APIs. In addition, I am able to work in a team and collaborate with other developers to deliver high quality projects under tight deadlines.
                 </p>
             </div>
     </section>
