Modificando las rutas de las imagenes de la seccion formation

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 </span>
                 <h4>SENA colombia</h4>
                 <hr>
-                <img class="formation__card-image" src="/img/sena-colombia.jpg" alt="Sena Colombia">
+                <img class="formation__card-image" src="img/sena-colombia.jpg" alt="Sena Colombia">
                 <p>
                     SENA (2020 - 2021)
                 </p>
@@ -246,7 +246,7 @@
                 </span>
                 <h4>Alura Latam - ONE</h4>
                 <hr>
-                <img class="formation__card-image" src="/img/alura-latam.png" alt="Sena Colombia">
+                <img class="formation__card-image" src="img/alura-latam.png" alt="Sena Colombia">
                 <p>
                     Alura Latam (2022 - 2023)
                 </p>
@@ -255,9 +255,9 @@
                 <span class="formation__card-icon"><i class="fa-solid fa-code"></i></span>
                 <h4>Website Development</h4>
                 <hr>
-                <img class="formation__card-image" src="/img/codigo-facilito2.png" alt="Sena Colombia">
+                <img class="formation__card-image" src="img/codigo-facilito2.png" alt="Sena Colombia">
                 <p>
-                   Codigo Facilito (2021)
+                    Codigo Facilito (2021)
                 </p>
             </div>
         
